# crest

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTBOOK.md  PRODUCT_STATUS.md  README.md  SECURITY.md  package-lock.json  package.json  release_notes.md  test_fend.rs
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
configs/: plugins.manifest.example.json
extensions-sdk/: api.ts  types.ts
src/: App.tsx  categorySlug.ts  iconResolve.ts  index.css  main.tsx
src-tauri/: Cargo.toml  crest_index.db  crest_index.db-journal  dev.koustav.crest.metainfo.xml  tauri.conf.json
src-tauri/src/: clipboard.rs  config.rs  hotkey.rs  lib.rs  plugins.rs  window.rs
src-tauri/src/commands/: extensions.rs  icons.rs  mod.rs  pty.rs  search.rs  system.rs
src-tauri/src/indexer/: apps.rs  files.rs
src/components/: AppIcon.css  AppIcon.tsx  CommandPalette.css  CommandPalette.tsx  PreviewPanel.css  PreviewPanel.tsx  ResultList.css  ResultList.tsx  SearchInput.css  SearchInput.tsx  ShortcutSetupBanner.css  ShortcutSetupBanner.tsx  TerminalPanel.css  TerminalPanel.tsx  UpdateNotification.css  UpdateNotification.tsx
src/store/: index.ts
src/types/: ipc.ts
website/: documentation.html  index.html  motion-init.js  motion.css  script.js  style.css  tutorial.html
