[package]
name = "crest"
version = "0.1.0"
description = "A Raycast-equivalent launcher for Linux"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
global-hotkey = "0.6"
nucleo = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
notify = "6"
xdg = "2.5"
image = "0.25"
freedesktop_entry_parser = "2"
arboard = "3"
meval = "0.2"
dirs = "5"
